# Fast_api

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 6d22ba9695f1_database_creation.py  8446b53a4d85_initial.py  911d92ad990d_database_creation.py  ebade8592421_initial.py  fae8adf76d06_добавил_колонку_email_в_user.py
models/: models.py
src/: database.py  main.py
src/auth/: manager.py  schemas.py
src/users/: crud.py  schemas.py  views.py
